Fixed profile menu button alignments

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -72,6 +72,7 @@
         color: rgba($color-text-inverted, .8)
         font-size: 16px
         overflow: hidden
+        text-align: center
 
         i
             margin-top: 2px
