--- a/app/client/stylesheets/components/pu-profilemenu.sass
+++ b/app/client/stylesheets/components/pu-profilemenu.sass
@@ -21,11 +21,7 @@
         li 
             min-width: 33%
             max-width: 33%
-
-            a 
-                text-align: center
-                padding-left: 0
-                padding-right: 0
+            text-align: center
 
     section > ul
         margin-bottom: 10px
